full-moon/tests/roblox_cases/fail/parser/string-interpolation-double-brace-recovery/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/roblox_cases/fail/parser/string-interpolation-double-brace-recovery
---
error[ast]: unexpected double brace, try \{ if you meant to escape
  ┌─ source.lua:1:21
  │
1 │ local _ = `2 + 2 = {{2 + 2}}`
  │                     ^


